Refactor state transitions to use IDs instead of names
- Update IStateTransition interface to include convertNamesToIds method
- Modify JavaStateTransition and ActionDefinitionStateTransition to implement new method
- Adjust StateTransitions class to use Long IDs for state references
- Update StateTransitionsRepository to convert names to IDs when adding new transitions
- Implement StateManagementService for centralized state name to ID conversion
- Maintain ability to define transitions using state names in code for readability
- Ensure runtime operations use state IDs for improved efficiency

Implement state name update with real-time UI refresh

- Add state name update functionality in StateDetails component
- Modify StateDetailsButtons to include name update input and submit button
- Update StateDropdown to reflect name changes without page refresh
- Implement backend endpoint for state name updates in StateController
- Improve state management in StateDetails to update local state and allStates
- Ensure consistent state representation across components after name updates

Fix transition display and data handling in StateImage component

- Resolve undefined transitions prop issue
- Implement proper data flow for transitions through component hierarchy
- Add error checking and default values for transitions
- Replace state IDs with state names in transition display
- Improve error logging and debugging in StateImage component
- Update StateDetails to properly fetch and manage transitions
- Ensure consistent prop passing in StateImageSet

Implement DSL for state structure building in web app

- Choose Domain-Specific Language (DSL) approach for state structure creation
- Create ActionDefinition and ActionStep classes to represent DSL structure
- Implement ActionDefinitionResponse and ActionStepResponse for API communication
- Develop ActionDefinitionEntityMapper for conversion between entities and responses
- Update TransitionEntity to use List<ActionDefinitionEnt